--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   get_storage: ^2.0.3
   lottie: ^1.4.3
   http: ^0.13.5
+  firebase_auth: ^4.1.0
+  firebase_core: ^2.1.1
 
 dev_dependencies:
   flutter_test:
